<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_joint_force</name>
  <version>0.0.1</version>
  <description>The gazebo_ros_joint_force package</description>

  <maintainer email="manuel.ilg@ntb.ch">Manuel Ilg</maintainer>

  <license>TODO</license>

  <url type="repository">https://github.com/manuelilg/gazebo_ros_joint_force</url>

  <author>Manuel Ilg</author>

  <buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>gazebo_dev</depend>
	<depend>sensor_msgs</depend>
	<!-- boost in roscpp -->
	<depend>boost</depend>

  <export>
  </export>
</package>
